Update CMake and fix error to build in Windows without WebRTC

--- a/contrib/cmake/CMakeLists.txt
+++ b/contrib/cmake/CMakeLists.txt
@@ -83,6 +83,7 @@ set (SRCS
     ${KarereDir}/src/megachatapi.cpp
     ${KarereDir}/src/megachatapi_impl.cpp
     ${KarereDir}/src/kareredb.cpp
+    ${KarereDir}/src/chatclientDb.cpp
 
     ${KarereDir}/src/base/logger.cpp
     ${KarereDir}/src/net/websocketsIO.cpp
