Add sources from net

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,7 @@ target_include_directories(CHATlib
 
 # Include modules in subdirectories with sources for CHAtlib
 include(base/base.cmake)
+include(net/net.cmake)
 
 set_target_properties(CHATlib PROPERTIES
     VERSION ${PROJECT_VERSION}
