--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,3 +69,8 @@ add_subdirectory(third-party/mega)
 
 # Load the MEGAchat library target
 add_subdirectory(src)
+
+# Load Qt bindings for MEGAchat
+if(ENABLE_QT_BINDINGS)
+    add_subdirectory(bindings/qt)
+endif()
