Link with WebRTC
- Added overlay directory to find WebRTC library
- Added find_package to start using and linking with the WebRTC library
- Adjust PRIVATE to PUBLIC include directories now needed.
- Adjusted vcpkg.json to use BoringSSL when WebRTC is enabled

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,9 +84,10 @@ target_include_directories(CHATlib
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> # For the top level projects.
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> # For the external projects.
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../third-party> # TODO rapidjson, header-only lib
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/third-party> # rapidjson
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
-        ${CMAKE_CURRENT_SOURCE_DIR}/../third-party # rapidjson, header-only lib
 )
 
 # Include modules in subdirectories with sources for CHAtlib
