Move videoRenderer to the qt app
Used when WebRTC is enabled, but specific for Qt, so moved out of the
library to the Qt App.

--- a/examples/qtmegachatapi/CMakeLists.txt
+++ b/examples/qtmegachatapi/CMakeLists.txt
@@ -73,10 +73,12 @@ target_sources_conditional(QtApp
     peerWidget.h
     meetingSession.h
     meetingView.h
+    ../../src/videoRenderer_Qt.h
     
     peerWidget.cpp
     meetingSession.cpp    
     meetingView.cpp
+    ../../src/videoRenderer_Qt.cpp
 )
 
 # Activate properties for Qt code
