--- a/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets-buildtype.cmake.in
+++ b/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets-buildtype.cmake.in
@@ -13,4 +13,4 @@ set_target_properties(@cmake_target_name@ PROPERTIES
     IMPORTED_LOCATION_${cmake_build_type_upper} "${_LIB_PATH}"
 )
 
-unset(_LIB_PATH)
+unset(_LIB_PATH CACHE)
