--- a/tests/sdk_test/CMakeLists.txt
+++ b/tests/sdk_test/CMakeLists.txt
@@ -1,45 +1,51 @@
-cmake_minimum_required(VERSION 3.0)
-project(sdk_test)
 
-set(CMAKE_BUILD_TYPE "Debug")
+add_executable(megachat_tests)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
+target_sources(megachat_tests
+    PRIVATE
+    sdk_test.h
+    ../../third-party/mega/tests/gtest_common.h # TODO From SDK utils target
+    ../../third-party/mega/tests/integration/sdk_test_utils.h # TODO From SDK utils target
 
-set (SRCS
     sdk_test.cpp
-    ../../third-party/mega/tests/gtest_common.cpp
+    ../../third-party/mega/tests/gtest_common.cpp # TODO From SDK utils target
+    ../../third-party/mega/tests/integration/sdk_test_utils.cpp # TODO From SDK utils target
 )
 
-add_subdirectory(../../src karere)
+# Load and link needed libraries for the CHATlib tests
+find_package(GTest CONFIG REQUIRED)
 
-get_property(KARERE_INCLUDE_DIRS GLOBAL PROPERTY KARERE_INCLUDE_DIRS)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KARERE_INCLUDE_DIRS} ../../third-party/mega/tests)
+target_link_libraries(megachat_tests
+    PRIVATE
+    GTest::gmock
+    GTest::gtest
+    MEGA::CHATlib
+)
 
-get_property(KARERE_DEFINES GLOBAL PROPERTY KARERE_DEFINES)
-add_definitions(${KARERE_DEFINES})
+# TODO From SDK utils target
+target_include_directories(megachat_tests
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/mega/tests/
+)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(SYSLIBS)
-if (CLANG_STDLIB)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=lib${CLANG_STDLIB}")
-    set(SYSLIBS ${CLANG_STDLIB})
+## Adjust compilation flags for warnings and errors ##
+target_platform_compile_options(
+    TARGET megachat_tests
+    UNIX $<$<CONFIG:Debug>:-ggdb3> -Wall -Wextra -Wconversion -Wno-unused-parameter
+)
+
+if(ENABLE_CHATLIB_WERROR)
+    target_platform_compile_options(
+        TARGET megachat_tests
+        UNIX  $<$<CONFIG:Debug>: -Werror
+                                 -Wno-error=deprecated-declarations> # Kept as a warning, do not promote to error.
+    )
 endif()
 
-add_executable(sdk_test ${SRCS})
-
-target_link_libraries(sdk_test
-    karere gmock gtest
-    ${SYSLIBS}
-)
-
-
-set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/dist")
-INSTALL(TARGETS sdk_test DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT Runtime)
-
-include(CPack)
-
-add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/karereDbSchema.cpp
-    COMMAND ${CMAKE_COMMAND} -DSRCDIR=${CMAKE_CURRENT_SOURCE_DIR} -P ${CMAKE_CURRENT_SOURCE_DIR}/genDbSchema.cmake
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/dbSchema.sql
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+# Integration tests require the following file to work
+file(GLOB TESTING_AUX_FILES "*.png")
+add_custom_command(
+    TARGET megachat_tests POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${TESTING_AUX_FILES} $<TARGET_FILE_DIR:megachat_tests>
+    COMMENT "Copying test files for integration tests."
 )
