Use the common MEGA::test_tools target from the SDK
Instead of using the files directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,5 +101,7 @@ endif()
 
 # Load integration tests
 if(ENABLE_CHATLIB_TESTS)
+    # Load test_tools target from the SDK
+    add_subdirectory(third-party/mega/tests)
     add_subdirectory(tests/sdk_test)
 endif()
