Add megaclc example in CMake
Add new CMakeLists.txt for megaclc and include it from the main one
Add boost-program-options dependency for megaclc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,6 +65,13 @@ target_sources_conditional(CHATlib
     rtcCrypto.cpp
 )
 
+target_sources_conditional(CHATlib
+    FLAG ENABLE_CHATLIB_TESTS
+    PRIVATE
+    async_utils.h
+    async_utils.cpp
+)
+
 # Generate karereDbSchema.cpp
 add_custom_command(
     OUTPUT karereDbSchema.cpp
