--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,14 @@ if(NOT PROJECT_NAME)
     message(STATUS "[CHATlib] is a top-level project. Install target, examples and tests will be enabled by default.")
     set(CHATLIB_STANDALONE 1)
     option(ENABLE_CHATLIB_QTAPP "Qt App example application is built if enabled" ON)
+    option(ENABLE_CHATLIB_MEGACLC "MEGAclc example application is built if enabled" ON)
     option(ENABLE_CHATLIB_TESTS "Integration tests are built if enabled" ON)
     option(ENABLE_CHATLIB_WERROR "Enable warnings as errors" ON)
 else()
     message(STATUS "[CHATlib] is building under project [${PROJECT_NAME}] Install target, examples and tests will not be enabled by default.")
     set(SDKLIB_STANDALONE 0)
     option(ENABLE_CHATLIB_QTAPP "Example application is built if enabled" OFF)
+    option(ENABLE_CHATLIB_MEGACLC "MEGAclc example application is built if enabled" OFF)
     option(ENABLE_CHATLIB_TESTS "Integration and unit tests are built if enabled" OFF)
     option(ENABLE_CHATLIB_WERROR "Enable warnings as errors" OFF)
 endif()
@@ -91,3 +93,10 @@ endif()
 if(ENABLE_CHATLIB_QTAPP)
     add_subdirectory(examples/qtmegachatapi)
 endif()
+
+# Load MEGAclc example.
+if(ENABLE_CHATLIB_MEGACLC)
+    add_subdirectory(examples/megaclc)
+endif()
+
+
