Add support to build the MEGAchat tests in MacOS
Silence some warning-as-errors

--- a/tests/sdk_test/CMakeLists.txt
+++ b/tests/sdk_test/CMakeLists.txt
@@ -25,6 +25,7 @@ if(ENABLE_CHATLIB_WERROR)
         TARGET megachat_tests
         UNIX  $<$<CONFIG:Debug>: -Werror
                                  -Wno-error=deprecated-declarations> # Kept as a warning, do not promote to error.
+        APPLE $<$<CONFIG:Debug>: -Wno-sign-conversion  -Wno-overloaded-virtual>
     )
 endif()
 
