--- a/examples/megaclc/CMakeLists.txt
+++ b/examples/megaclc/CMakeLists.txt
@@ -58,5 +58,6 @@ if(ENABLE_CHATLIB_WERROR)
         TARGET megaclc
         UNIX  $<$<CONFIG:Debug>: -Werror
                                  -Wno-error=deprecated-declarations> # Kept as a warning, do not promote to error.
+        APPLE $<$<CONFIG:Debug>: -Wno-sign-conversion  -Wno-overloaded-virtual>
     )
 endif()
