Add NOMINMAX option in qtapp

--- a/examples/qtmegachatapi/CMakeLists.txt
+++ b/examples/qtmegachatapi/CMakeLists.txt
@@ -81,6 +81,13 @@ target_sources_conditional(QtApp
     videoRenderer_Qt.cpp
 )
 
+if (WIN32)
+    target_compile_definitions(QtApp
+        PRIVATE
+            NOMINMAX # TODO Fix locally
+    )
+endif()
+
 if(NOT USE_WEBRTC)
      # Exclude from automoc. Sources are not built but AUTOMOC process it anyway.
      set_property(SOURCE videoRenderer_Qt.h PROPERTY SKIP_AUTOMOC ON)
