--- a/contrib/cmake/vcpkg_overlay_ports/webrtc/Config.cmake.in
+++ b/contrib/cmake/vcpkg_overlay_ports/webrtc/Config.cmake.in
@@ -1,6 +1,11 @@
 
 @PACKAGE_INIT@
 
+if(@use_system_libjpeg@)
+    include(CMakeFindDependencyMacro)
+    find_dependency(JPEG)
+endif()
+
 include("${CMAKE_CURRENT_LIST_DIR}/@cmake_target_name@Targets.cmake")
 
 check_required_components(@cmake_target_name@)
