Set more default options for Android and iOS builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,19 @@ set(VCPKG_ROOT "" CACHE PATH "If set, it will build and use the VCPKG packages d
 if(NOT PROJECT_NAME)
     message(STATUS "[CHATlib] is a top-level project. Install target, examples and tests will be enabled by default.")
     set(CHATLIB_STANDALONE 1)
-    option(ENABLE_CHATLIB_QTAPP "Qt App example application is built if enabled" ON)
-    option(ENABLE_CHATLIB_MEGACLC "MEGAclc example application is built if enabled" ON)
-    option(ENABLE_CHATLIB_TESTS "Integration tests are built if enabled" ON)
+    if((CMAKE_SYSTEM_NAME STREQUAL "iOS") OR (CMAKE_SYSTEM_NAME STREQUAL "Android"))
+        option(ENABLE_CHATLIB_QTAPP "Qt example app is built if enabled" OFF)
+        option(ENABLE_CHATLIB_MEGACLC "MEGAclc example app is built if enabled" OFF)
+        option(ENABLE_CHATLIB_TESTS "Integration tests are built if enabled" OFF)
+    else()
+        option(ENABLE_CHATLIB_QTAPP "Qt example app is built if enabled" ON)
+        option(ENABLE_CHATLIB_MEGACLC "MEGAclc example app is built if enabled" ON)
+        option(ENABLE_CHATLIB_TESTS "Integration tests are built if enabled" ON)
+    endif()
     option(ENABLE_CHATLIB_WERROR "Enable warnings as errors" ON)
 else()
     message(STATUS "[CHATlib] is building under project [${PROJECT_NAME}] Install target, examples and tests will not be enabled by default.")
-    set(SDKLIB_STANDALONE 0)
+    set(CHATLIB_STANDALONE 0)
     option(ENABLE_CHATLIB_QTAPP "Example application is built if enabled" OFF)
     option(ENABLE_CHATLIB_MEGACLC "MEGAclc example application is built if enabled" OFF)
     option(ENABLE_CHATLIB_TESTS "Integration and unit tests are built if enabled" OFF)
