Install extra libraries for iOS

--- a/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets-buildtype.cmake.in
+++ b/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets-buildtype.cmake.in
@@ -1,16 +1,28 @@
 
 set_property(TARGET @cmake_target_name@ APPEND PROPERTY IMPORTED_CONFIGURATIONS "@cmake_build_type@")
 
-find_library(_LIB_PATH REQUIRED
-    NAMES @cmake_target_name@
-    NO_DEFAULT_PATH
-    HINTS "${_IMPORTED_PREFIX}/@cmake_install_dir@"
-)
-
 string(TOUPPER "@cmake_build_type@" cmake_build_type_upper)
 
+foreach(library IN ITEMS @cmake_target_name@ @cmake_target_name_extra@)
+
+    find_library(_LIB_PATH REQUIRED
+        NAMES ${library}
+        NO_DEFAULT_PATH
+        HINTS "${_IMPORTED_PREFIX}/@cmake_install_dir@"
+    )
+
+    list(APPEND LIBS_LIST "${_LIB_PATH}")
+
+    unset(_LIB_PATH CACHE)
+
+endforeach()
+
+if(LIBS_LIST)
+    message(STATUS "WebRTC found (${cmake_build_type_upper}): ${LIBS_LIST}")
+endif()
+
 set_target_properties(@cmake_target_name@ PROPERTIES
-    IMPORTED_LOCATION_${cmake_build_type_upper} "${_LIB_PATH}"
+    IMPORTED_LOCATION_${cmake_build_type_upper} "${LIBS_LIST}"
 )
 
-unset(_LIB_PATH CACHE)
+unset(LIBS_LIST)
