--- a/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets.cmake.in
+++ b/contrib/cmake/vcpkg_overlay_ports/webrtc/webrtcTargets.cmake.in
@@ -14,6 +14,10 @@ if(NOT TARGET @cmake_target_name@)
         @cmake_target_definitions@
     )
 
+    set_target_properties(@cmake_target_name@ PROPERTIES
+        INTERFACE_LINK_OPTIONS "@cmake_target_options@"
+    )
+
     # Load information for each installed configuration.
     file(GLOB _cmake_config_files "${CMAKE_CURRENT_LIST_DIR}/@cmake_target_name@Targets-*.cmake")
     foreach(_cmake_config_file IN LISTS _cmake_config_files)
